<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container_curriculum_vitae"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.activity.MainActivity"
            android:paddingBottom="20dp">

        <TextView
                android:id="@+id/tv_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="28sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Connor McFadden"/>

        <TextView
                android:id="@+id/tv_person_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android Developer: 4 years experience"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_name"/>

        <TextView
                android:id="@+id/tv_person_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_experience"
                tools:text="connormcfadden7@gmail.com"/>

        <TextView
                style="@style/GenericSubTitleStyle"
                android:id="@+id/tv_app_highlight_label"
                android:text="@string/curriculum_vitae_app_highlight_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_email"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <View
                style="@style/GenericViewSeparator"
                android:id="@+id/view_app_highlight_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_highlight_label"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_app_highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/view_app_highlight_separator"/>

        <TextView
                style="@style/GenericSubTitleStyle"
                android:id="@+id/tv_technical_experience_label"
                android:text="@string/curriculum_vitae_technical_experience_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_app_highlight"/>

        <View
                style="@style/GenericViewSeparator"
                android:id="@+id/view_technical_experience_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_technical_experience_label"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_technical_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/view_technical_experience_separator"/>

        <TextView
                style="@style/GenericSubTitleStyle"
                android:id="@+id/tv_employment_history_label"
                android:text="@string/curriculum_vitae_employment_history_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_technical_experience"/>

        <View
                style="@style/GenericViewSeparator"
                android:id="@+id/view_employment_history_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_employment_history_label"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_employment_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/view_employment_history_separator"/>

        <TextView
                style="@style/GenericSubTitleStyle"
                android:id="@+id/tv_education_label"
                android:text="@string/curriculum_vitae_education_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_employment_history"/>

        <View
                style="@style/GenericViewSeparator"
                android:id="@+id/view_education_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_education_label"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/view_education_separator"/>

        <TextView
                style="@style/GenericSubTitleStyle"
                android:id="@+id/tv_person_details_label"
                android:text="@string/curriculum_vitae_hobbies_and_interests_label"
                app:layout_constraintTop_toBottomOf="@+id/rv_education"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <View
                style="@style/GenericViewSeparator"
                android:id="@+id/view_person_details_separator"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_details_label"/>

        <TextView
                android:id="@+id/tv_person_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/view_person_details_separator"/>

        <TextView
                android:id="@+id/tv_references_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/curriculum_vitae_references_available_label"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_details"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <ProgressBar
                android:id="@+id/pb_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>